# LingtiStudio

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  README-CN.md  README-JA.md  README-KO.md  README-TW.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.runtime.txt  requirements.txt
api/: server.py
cli/: main.py
configs/: config.example.yaml
core/: config.py
docs/: DEMO.md  FRONTEND_ENV.md  WINDOWS_DEPLOY.md  ci-test.yml.example
frontend/: .gitignore  Dockerfile.frontend  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/create/: page.tsx
frontend/app/projects/[projectId]/: page.tsx
frontend/app/studio/: page.tsx
frontend/components/: analysis-client.tsx  configuration-form.tsx  create-project-form.tsx  language-provider.tsx  project-detail-client.tsx  projects-panel.tsx  providers.tsx  settings-client.tsx  setup-onboarding.tsx  workspace-layout.tsx
frontend/lib/: api.ts  types.ts
modules/: assembler.py  image_gen.py  jianying_draft.py  llm.py  memory.py  tts.py  video_gen.py
skills/: SKILL.md
tests/: test_all.py  test_analyze.py  test_e2e_real.py  test_pipeline.py
